--- a/Lab6/layout/styles/layout.css
+++ b/Lab6/layout/styles/layout.css
@@ -355,12 +355,61 @@ input:focus, textarea:focus, *:required:focus{border-color:#CF9C67;}
 }
 
 
+/*------------- For account page ----------------------*/
+.card {
+  background-color: white;
+  padding: 20px;
+  margin-top: 20px;
+  border: 3px solid #DEB887;
+}
+
+.avatar {
+    vertical-align: middle;
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    border: 3px solid #DEB887;
+
+}
+/* Style the tab */
+.tab {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    background-color: #f1f1f1;
+}
+/* Style the buttons inside the tab */
+.tab button {
+    background-color: inherit;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: 0.3s;
+    font-size: 17px;
+}
+/* Change background color of buttons on hover */
+.tab button:hover {
+    background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+    background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: 1px solid #ccc;
+    border-top: none;
+}
 
 
 
 
-
-/*-----------------for login page---------------------*/
+/*----------------- for login page---------------------*/
 .Logincontainer{
 	padding:16px; 
 }
@@ -370,8 +419,6 @@ input:focus, textarea:focus, *:required:focus{border-color:#CF9C67;}
     margin: 24px 0 12px 0;
     position: relative;
 }
-
-
 
 .modal {
     display: none; /* Hidden by default */
