--- a/Lab6/backend/views/account.ejs
+++ b/Lab6/backend/views/account.ejs
@@ -29,13 +29,14 @@ Team Member:
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="index.html">Funzi</a></h1>
+        <h1><a href="/">Funzi</a></h1>
       </div>
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/">Home</a></li>
             
-          <li class="active"><a href="account.html">Account</a></li>
+          <li class="active"><a href="/account">Account</a></li>
+		  <li class="active"><a href="/login">Login</a></li>
             
           <li><a class="drop" href="#">Dropdown</a>
             <ul>
