--- a/Lab6/backend/views/profile.ejs
+++ b/Lab6/backend/views/profile.ejs
@@ -29,14 +29,14 @@ Team Member:
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="index.html">Funzi</a></h1>
+        <h1><a href="/">Funzi</a></h1>
       </div>
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li><a href="index.html">Home</a></li>
+          <li><a href="/">Home</a></li>
             
-          <li class="active"><a href="profile.html">Profile</a></li>
-          <li><a href="login.html">Login</a></li>
+          <li class="active"><a href="/profile">Profile</a></li>
+          <li><a href="/profile">Login</a></li>
           <li><a class="drop" href="#">Dropdown</a>
             <ul>
               <li><a href="#">Level 2</a></li>
