--- a/Lab6/backend/views/account.ejs
+++ b/Lab6/backend/views/account.ejs
@@ -34,7 +34,7 @@ Team Member:
       <nav id="mainav" class="fl_right">
         <ul class="clear">
           <li><a href="/">Home</a></li>
-            
+          <li><a href="/post">Post</a></li>
           <li class="active"><a href="/account">Account</a></li>
 		  <li class="active"><a href="/login">Login</a></li>
             
