--- a/Lab6/backend/views/index.ejs
+++ b/Lab6/backend/views/index.ejs
@@ -34,10 +34,11 @@ Team Member:
       <nav id="mainav" class="fl_right">
         <ul class="clear">
           <li class="active"><a href="/">Home</a></li>
-            
-		  <li><a href="/profile">Profile</a></li>
+          <li><a href="/post">Post</a></li>
+		      <li><a href="/profile">Profile</a></li>
           <li><a href="/account">Login</a></li>
-            
+			
+		   
           <li><a class="drop" href="#">Dropdown</a>
             <ul>
               <li><a href="#">Level 2</a></li>
@@ -86,7 +87,7 @@ Team Member:
         <h6 class="heading">How to find the best residence in you mind:</h6>
         <p>Choose 3 different locations that you will visit most often during the time you living in the area.</p>
     
-        <footer><a class="btn" href="#">Search &raquo;</a></footer>
+        <footer><a class="btn" href="/search.html">Search &raquo;</a></footer>
       </div>
       <div class="one_half"><a class="imgover" href="#"><img src="images/map.png" alt=""></a></div>
     </article>
