--- a/Lab6/backend/views/account.ejs
+++ b/Lab6/backend/views/account.ejs
@@ -126,24 +126,15 @@ Team Member:
                   <h1>Sign Up</h1>
                   <p>Please fill in this form to create an account.</p>
                   <hr>
-                  <!-- First Name box-->
-                  <label for="fname"><b>First Name</b></label>
-                  <input type="text" placeholder="Enter First Name" name="fname" required>
-                  <!-- Last Name box-->
-                  <label for="lname"><b>Last Name</b></label>
-                  <input type="text" placeholder="Enter Last Name" name="lname" required>
-                  <!-- Email box-->
-                  <label for="email"><b>Email</b></label>
-                  <input type="text" placeholder="Enter Email" name="email" required>
-                  <!-- Password box-->
-                  <label for="psw"><b>Password</b></label>
-                  <input type="password" placeholder="Enter Password" name="psw" required>
-                  <!-- Re-type Password box-->
-                  <label for="psw-repeat"><b>Repeat Password</b></label>
-                  <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-                  <!-- Phone number box-->
-                  <label for="phone"><b>Phone Number</b></label>
-                  <input type="text" placeholder="Enter Phone Number" name="phone" required>
+                  <!-- Username box -->
+                  <div class="form-group">
+          <label>Email</label>
+          <input type="text" class="form-control" name="email">
+          </div>
+        <div class="form-group">
+          <label>Password</label>
+          <input type="password" class="form-control" name="password">
+        </div>
 
 
                   <label>
