--- a/Lab6/backend/views/post.ejs
+++ b/Lab6/backend/views/post.ejs
@@ -29,11 +29,11 @@ Team Member:
     <header id="header" class="hoc clear"> 
       <!-- ################################################################################################ -->
       <div id="logo" class="fl_left">
-        <h1><a href="index.html">Funzi</a></h1>
+        <h1><a href="/">Funzi</a></h1>
       </div>
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li><a href="/index">Home</a></li>
+          <li><a href="/">Home</a></li>
           <li class="active"><a href="/post">Post</a></li>
           <li><a href="/profile">Profile</a></li>
           <li><a href="/login">Login</a></li>
@@ -84,15 +84,17 @@ Team Member:
       <div class="one_half first">
         <h6 class="heading">How to lease an apartment in your area:</h6>
         <p>Fill in the form and hit submit. We will help you create your own leasing information and find the best matching redisent.</p>
-        <form action="/post" method="post">
+        <<form action="/post" method="post" enctype="multipart/form-data">
           <div id="accout_info" class="card">
             <h2>Leasing Information</h2>
+            <p>Select Image to Upload:</p>
+            <input type="file" name="image" size="50" accept="image/*"><br>
             Address: <input type="text" name="address" required><br>
             First Name: <input type="text" name="fname" required><br>
             Last Name: <input type="text" name="lname" required><br>
-            Contact Email: <input type="text" name="email" required><br>
-            Contact Phone Number: <input type="text" name="phone" required><br>
-            Housing Info: <textarea name="bio" rows = "5" cols = "50" class="overflow"></textarea><br>
+            Contact Email: <input type="text" name="email" value = <%= user.local.email %> readonly><br>
+            Contact Phone Number: <input type="text" name="phoneno" required><br>
+            Housing Info: <textarea name="hbio" rows = "5" cols = "50" class="overflow"></textarea><br>
           </div>
           <br>
           <button type="submit" class="btn">Submit</button>
