--- a/Lab6/backend/views/search.ejs
+++ b/Lab6/backend/views/search.ejs
@@ -324,7 +324,7 @@
       
         //query string creation
       function goToPage(event){
-        for(k = 0; k < j - 1; k++){
+        for(k = 0; k < j; k++){
             console.log('eleement in houseid: ' + houseid[k]);
             if(houseid[k] == true && k == 0){
                 return_msg += "pid=" + hids[k];
