--- a/Lab6/backend/views/result.ejs
+++ b/Lab6/backend/views/result.ejs
@@ -120,5 +120,28 @@
 <script src="layout/scripts/jquery.mobilemenu.js"></script>
 <script src="layout/scripts/map.js"></script>
 <script src="https://maps.googleapis.com/maps/api/js?libraries=visualization"></script> <!-- Google Map Visualization Library -->
+<script>
+
+  var add1 = "401 W Wood. St. West Lafayette China"
+  var pic1 = "images/apt1.jpg"
+  var add2 = "402 w blah blah blah indiana China"
+  var pic2 = "images/apt2.jpg"
+    
+  var w_div = document.getElementById("contain")
+
+  var hp = "<%= hp %>";
+
+  //"<div class='bg-white' id='white'><div class = 'one_half first'><div class='img-inner'><img src="+ pic1 + " class='img-responsive' id='myimage1' alt='perfect 1'></div></div><div class='one-half'><p><a1 id='ad1'>"+ add1+"</a1><br></p><footer><a class='btn' href='#''>More &raquo;</a></footer></div></div>"
+
+
+
+  if(hp){
+    <% pinfo.forEach(function(pif){ %>
+          w_div.innerHTML += "<div class='bg-white' id='white'><div class = 'one_half first'><div class='img-inner'><img src=images/"+<%=pif.url %>+ " class='img-responsive' id='myimage1' alt='perfect 1'></div></div><div class='one-half'><p><a1 id='ad1'>"+  <%=pif.address %> + "</a1><br></p><footer><a class='btn' href='#''>More &raquo;</a></footer></div></div>"
+
+    <%  }); %>
+  }
+  
+</script>
 </body>
 </html>
