--- a/Lab6/backend/views/result.ejs
+++ b/Lab6/backend/views/result.ejs
@@ -53,11 +53,11 @@
   </div>
     
     <div class="wrapper row3">
-        <div id="topbar" class="hoc clear"> </div>
+        <div id="topbar" class="hoc clear" > </div>
     </div>
     
     <div class="contents">
-        <main class="hoc container clear">
+        <main class="hoc container clear" id="contain">
         <div class="bg-white">
             
         </div> 
@@ -109,7 +109,7 @@
 
   if(hp){
     <% pinfo.forEach(function(pif){ %>
-          w_div.innerHTML += "<div class='bg-white' id='white'><div class = 'one_half first'><div class='img-inner'><img src=images/"+<%=pif.url %>+ " class='img-responsive' id='myimage1' alt='perfect 1'></div></div><div class='one-half'><p><a1 id='ad1'>"+  <%=pif.address %> + "</a1><br></p><footer><a class='btn' href='#''>More &raquo;</a></footer></div></div>"
+          w_div.innerHTML += "<div class='bg-white' id='white'><div class = 'one_half first'><div class='img-inner'><img src=images/"+"<%=pif.url %>"+ " class='img-responsive' id='myimage1' alt='perfect 1'></div></div><div class='one-half'><p><a1 id='ad1'>"+  "<%=pif.address %>" + "</a1><br></p><footer><a class='btn' href='#''>More &raquo;</a></footer></div></div>"
 
     <%  }); %>
   }
