--- a/Lab6/backend/views/result.ejs
+++ b/Lab6/backend/views/result.ejs
@@ -53,45 +53,17 @@
   </div>
     
     <div class="wrapper row3">
-        <div id="topbar" class="hoc clear"> </div>
+        <div id="topbar" class="hoc clear" > </div>
     </div>
     
     <div class="contents">
-        <main class="hoc container clear">
+        <main class="hoc container clear" id="contain">
         <div class="bg-white">
-            <div class = "one_half first">
-            <div class="img-inner">
-                <img src="images/apt1.jpg" class="img-responsive" id="myimage" alt="perfect 1">
-            </div> 
-            </div>
-            <div class="one-half">
-                <h2>Perfect place No.1</h2>
-                <p>
-                    <a1>401 W Wood. St</a1><br>
-                    <a1>Lafayette</a1>
-                </p>
-                <h1 style="align-content: space-around">$650</h1>
-            <footer><a class="btn" href="#">More &raquo;</a></footer>
-
-            </div>
+            
         </div> 
             
         <div class="bg-grey">
-            <div class = "one_half first">
-            <div class="img-inner">
-                <img src="images/apt2.jpg" class="img-responsive" id="myimage" alt="perfect 1">
-            </div> 
-            </div>
-            <div class="one-half">
-                <h2>Perfect place No.2</h2>
-                <p>
-                    <a1>402 W Wood. St</a1><br>
-                    <a1>Lafayette</a1>
-                </p>
-                <h1 style="align-content: space-around">$390</h1>
-            <footer><a class="btn" href="#">More &raquo;</a></footer>
-
-            </div>
+            
         </div>
             
         </main>
@@ -129,18 +101,13 @@
     
   var w_div = document.getElementById("contain")
 
-  var hp = "<%= hp %>";
 
   //"<div class='bg-white' id='white'><div class = 'one_half first'><div class='img-inner'><img src="+ pic1 + " class='img-responsive' id='myimage1' alt='perfect 1'></div></div><div class='one-half'><p><a1 id='ad1'>"+ add1+"</a1><br></p><footer><a class='btn' href='#''>More &raquo;</a></footer></div></div>"
 
-
-
-  if(hp){
     <% pinfo.forEach(function(pif){ %>
-          w_div.innerHTML += "<div class='bg-white' id='white'><div class = 'one_half first'><div class='img-inner'><img src=images/"+<%=pif.url %>+ " class='img-responsive' id='myimage1' alt='perfect 1'></div></div><div class='one-half'><p><a1 id='ad1'>"+  <%=pif.address %> + "</a1><br></p><footer><a class='btn' href='#''>More &raquo;</a></footer></div></div>"
+          w_div.innerHTML += "<div class='bg-white' id='white'><div class = 'one_half first'><div class='img-inner'><img src=images/"+"<%=pif.url %>"+ " class='img-responsive' id='myimage1' alt='perfect 1'></div></div><div class='one-half'><p><a1 id='ad1'>"+  "<%=pif.address %>" + "</a1><br></p><footer><a class='btn' href='#''>More &raquo;</a></footer></div></div>"
 
     <%  }); %>
-  }
   
 </script>
 </body>
