--- a/Lab6/backend/views/result.ejs
+++ b/Lab6/backend/views/result.ejs
@@ -27,10 +27,10 @@
       </div>
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li class="active"><a href="index.html">Home</a></li>
+          <li class="active"><a href="/index">Home</a></li>
         
-          <li><a herf="/post">Post</a></li>
-          <li><a href="/">Account</a></li>
+          <li><a href="/post">Post</a></li>
+          <li><a href="/account">Account</a></li>
         
           <li><a class="drop" href="#">Dropdown</a>
             <ul>
@@ -104,8 +104,10 @@
 
   //"<div class='bg-white' id='white'><div class = 'one_half first'><div class='img-inner'><img src="+ pic1 + " class='img-responsive' id='myimage1' alt='perfect 1'></div></div><div class='one-half'><p><a1 id='ad1'>"+ add1+"</a1><br></p><footer><a class='btn' href='#''>More &raquo;</a></footer></div></div>"
 
+
+
     <% pinfo.forEach(function(pif){ %>
-          w_div.innerHTML += "<div class='bg-white' id='white'><div class = 'one_half first'><div class='img-inner'><img src=images/"+"<%=pif.url %>"+ " class='img-responsive' id='myimage1' alt='perfect 1'></div></div><div class='one-half'><p><a1 id='ad1'>"+  "<%=pif.address %>" + "</a1><br></p><footer><a class='btn' href='#''>More &raquo;</a></footer></div></div>"
+          w_div.innerHTML += "<div class='bg-white' id='white'><div class = 'one_half first'><div class='img-inner'><img src=images/"+"<%=pif.url %>"+ " class='img-responsive' id='myimage1' alt='perfect 1'></div></div><div class='one-half'><p><a1 id='ad1'>"+  "<%=pif.address %>" + "</a1><br></p><footer><a class='btn' href='/housing?postid=" + "<%= pif.count %>"  + "&email=" + "<%= pif.email %>" + "'>More &raquo;</a></footer></div></div>"
 
     <%  }); %>
   
