--- a/views/result.ejs
+++ b/views/result.ejs
@@ -27,7 +27,7 @@
       </div>
       <nav id="mainav" class="fl_right">
         <ul class="clear">
-          <li class="active"><a href="/index">Home</a></li>
+          <li class="active"><a href="/">Home</a></li>
         
           <li><a href="/post">Post</a></li>
           <li><a href="/account">Account</a></li>
