--- a/views/house.ejs
+++ b/views/house.ejs
@@ -37,7 +37,7 @@ Team Member:
           <li><a href="/post">Post</a></li>
           <li><a href="/profile">Profile</a></li>
           <li><a href="/login">Login</a></li>
-
+          
           
         </ul>
       </nav>
@@ -83,7 +83,7 @@ Team Member:
         </div>
       </div>
       <br>
-      <div class="one_half"><a href="#"><img src="images/<%= pinfo.url %>" alt=""></a></div>
+      <div class="one_half"><a href="#"><img src="/imagehouse?pid=<%= pinfo.pid %>" alt=""></a></div>
     </article>
     <!-- ################################################################################################ -->
     <!-- / main body -->
