--- a/views/result.ejs
+++ b/views/result.ejs
@@ -93,7 +93,7 @@
 
 
     <% pinfo.forEach(function(pif){ %>
-          w_div.innerHTML += "<div class='bg-white' id='white'><div class = 'one_half first'><div class='img-inner'><img src=images/"+"<%=pif.url %>"+ " class='img-responsive' id='myimage1' alt='perfect 1'></div></div><div class='one-half'><p><a1 id='ad1'>"+  "<%=pif.address %>" + "</a1><br></p><footer><a class='btn' href='/housing?postid=" + "<%= pif.count %>"  + "&email=" + "<%= pif.email %>" + "'>More &raquo;</a></footer></div></div>"
+          w_div.innerHTML += "<div class='bg-white' id='white'><div class = 'one_half first'><div class='img-inner'><img src=/imagehouse?pid="+"<%= pif.pid %>"+ " class='img-responsive' id='myimage1' alt='perfect 1'></div></div><div class='one-half'><p><a1 id='ad1'>"+  "<%=pif.address %>" + "</a1><br></p><footer><a class='btn' href='/housing?postid=" + "<%= pif.count %>"  + "&email=" + "<%= pif.email %>" + "'>More &raquo;</a></footer></div></div>"
 
     <%  }); %>
   
